syntax = "proto3";

package classroom.v1;
option go_package = "github.com/moyamoyaradost/classroom-go/lessons-tasks-service/api/v1;v1";


// Сервис для работы с уроками
service LessonsService {
    rpc CreateLesson (LessonCreateRequest) returns (LessonResponse);
    rpc GetLessonsByCourse (CourseIdRequest) returns (LessonsListResponse);
    rpc DeleteLesson (LessonIdRequest) returns (DeleteResponse);
}

// Сервис для работы с заданиями
service TasksService {
    rpc CreateTask (TaskCreateRequest) returns (TaskResponse);
    rpc GetTasksByCourse (CourseIdRequest) returns (TasksListResponse);
    rpc CompleteTask (UserTaskRequest) returns (CompleteTaskResponse);
    rpc GetCompletedTasksByUser (UserIdRequest) returns (UserTasksListResponse);
    
    // Отправка ответа на задание
    rpc SubmitTaskAnswer(SubmitAnswerRequest) returns (SubmitAnswerResponse);
    
    // Получение ответов ученика на задание
    rpc GetTaskAnswers(TaskAnswersRequest) returns (TaskAnswersResponse);
}

// Сообщения для уроков
message LessonCreateRequest {
    string course_id = 1;
    string description = 2;
}

message LessonResponse {
    string id = 1;
    string course_id = 2;
    string description = 3;
}

message UserIdRequest {
    string user_id = 1;
}

message LessonsListResponse {
    repeated LessonResponse lessons = 1;
}

// Сообщения для заданий
message TaskCreateRequest {
    string course_id = 1;
    string description = 2;
}

message TaskResponse {
    string id = 1;
    string course_id = 2;
    string description = 3;
}

message TasksListResponse {
    repeated TaskResponse tasks = 1;
}

// Сообщения для связи ученики-задания
message UserTaskRequest {
    string task_id = 1;
    string user_id = 2;
}

message CompleteTaskResponse {
    bool success = 1;
}

message UserTasksListResponse {
    repeated TaskResponse tasks = 1;
}

// Сообщения для ответов на задания
message SubmitAnswerRequest {
    string task_id = 1;
    string user_id = 2;
    string answer_text = 3;
    repeated string attachment_urls = 4;
}

message SubmitAnswerResponse {
    string id = 1;
    string task_id = 2;
    string user_id = 3;
    string answer_text = 4;
    repeated string attachment_urls = 5;
    string status = 6; // "pending", "approved", "rejected"
    string created_at = 7;
}

message TaskAnswersRequest {
    string task_id = 1;
    string user_id = 2; // Опционально, если нужно получить ответы конкретного ученика
}

message TaskAnswersResponse {
    repeated SubmitAnswerResponse answers = 1;
}

// Общие сообщения
message CourseIdRequest {
    string course_id = 1;
}

message LessonIdRequest {
    string lesson_id = 1;
}

message DeleteResponse {
    bool success = 1;
}
